optimized login, functional logout button, added header and footer, added rough dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,14 @@ body {
   box-sizing: border-box;
   font-family: 'Roboto', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+#root {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+main {
+  margin: 20px 200px;
+  margin-bottom: 100px;
+}
