--- a/src/Pages/Dashboard.css
+++ b/src/Pages/Dashboard.css
@@ -1,5 +1,5 @@
 .article-container {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
+    grid-template-columns: 3fr 1fr 1fr 1fr 1fr 0.5fr;
     gap: 30px;
 }
